Readme and App.json

--- a/app.json
+++ b/app.json
@@ -1,14 +1,11 @@
 {
   "expo": {
-    "name": "Kawai ToDo List",
+    "name": "Kawai To Do",
+    "description": "Made with React Native",
     "slug": "kawai-todo",
     "privacy": "public",
     "sdkVersion": "35.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,9 +17,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     }
